--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 h1
 {
-    font-size: moyen;
-}
-balise
-{
-    font-family: police;
-}
-p
-{
-    font-family: "arial black";
-}
-em
-{
     color: blue;
+}
+li{
+    color: rgb(49, 0, 128);
 }
 h1
 {
-    color: blue;
+    text-align: center;
+}
+body
+{
+    background-color: rgba(0, 140, 255, 0.322);
+}
+h1
+{
+    border: 6px  blueviolet solid;
+    box-shadow: 6px 6px 6px black
+}
+body
+{
+    background-image: url(neige.jpg);
 }
